# newportxps

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: stages_XPSC.ini  stages_XPSD.ini  system_exA.ini  system_exB.ini  system_exC.ini  system_exD.ini
newportxps/: XPS_C8_drivers.py  __init__.py  debugtime.py  ftp_wrapper.py  newportxps.py  utils.py  xps_main.py
