[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "newportxps/version.py"
version_scheme = "post-release"

[tool.setuptools.packages.find]
include = ["newportxps"]

[project]
name = "newportxps"
dynamic = ["version"]
authors = [
    {name="Matthew Newville", email="newville@cars.uchicago.edu"},
]

dependencies = ['pysftp', 'numpy']
description = "Python interface to Newport XPS motion controllers"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["motion control", "data collection"]

license = {text = "BSD License"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: Jython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]


[project.urls]
Homepage = "https://github.com/pyepics/newportxps/"
